# flipCoinFull

./: .env.example  .env.production  .env.production.template  .env.staging  .env.staging.template  .env.staging.test  .env.vercel.check  .eslintrc.json  .gitignore  .gitignore.codespaces  AGENT_OS_CONTEXT.md  AUTO_RESOLUTION_UPGRADE_GUIDE.md  About.md  Anchor.toml  CHANGED_FILES_SUMMARY.md  CLAUDE.md  CODESPACES_DEPLOYMENT.md  CODESPACES_DEPLOYMENT_GUIDE.md  CODESPACES_SYNC_INSTRUCTIONS.md  CODESPACE_SOLUTION.md  CORRECTED_ECONOMIC_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_ENV_VARS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_SYRIA.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEVNET_TESTING_GUIDE.md  ECONOMIC_ANALYSIS.md  ERROR_HANDLING_IMPROVEMENTS.md  FILES_TO_COPY.md  FINAL_ECONOMICS_SUMMARY.md  FINAL_SC_VERIFICATION.md  FIXES_APPLIED.md  FRONTEND_INTEGRATION_UPDATE.md  FRONTEND_READY.md  GAME_FIXES_SUMMARY.md  (+77 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  setup.sh
backend/: BACKEND-FIX-SUMMARY.md  RAILWAY_DEPLOY.md  package-lock.json  package.json  server-prisma.js  server-simple.js  server.js  websocket-server.js
docs/: UPDATED_DOCUMENTATION.md  (+3 more)
programs/coin-flipper/: Cargo.toml  Cargo.toml.backup
programs/coin-flipper/src/: lib.rs  lib_CORRECTED.rs  lib_final.rs  lib_optimized.rs  lib_original.rs  lib_playground.rs  lib_production.rs
programs/coin-flipper/tests/: coin-flipper.ts
programs/fair-coin-flipper/: Cargo.toml
programs/fair-coin-flipper/src/: lib_FINAL.rs
(+229 files in other folders)
