  [package]
  name = "coin-flipper"
  version = "0.1.0"
  description = "Created with Anchor"
  edition = "2021"

  [lib]
  crate-type = ["cdylib", "lib"]
  name = "coin_flipper"

  [features]
  no-entrypoint = []
  no-idl = []
  cpi = ["no-entrypoint"]
  default = []

  [dependencies]
  anchor-lang = "0.29.0"
  anchor-spl = "0.29.0"
  solana-program = "1.16"
