[package]
name = "fair-coin-flipper"
version = "0.1.0"
description = "A trustworthy, fair coin flip game using commit-reveal pattern"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fair_coin_flipper"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
sha2 = "0.10.8"
bytemuck = { version = "1.13.1", features = ["derive"] }

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }
